chore: Do not tag on develop branch

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -9,7 +9,6 @@ branches:
     tag: ''
   dev(elop)?(ment)?$:
     mode: ContinuousDeployment
-    tag: preview
-    increment: Inherit
+    tag: ''
 ignore:
   sha: []
